--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+try_stuff_output:
+  path: /try/output
+  controller: App\Controller\TryStuffController::index
