--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -14,5 +14,5 @@ try_stuff_new_task:
 
 # LYNX APP
 lynx_test:
-  path: /lynx/test
+  path: /lynx
   controller: App\Controller\LynxController::index
