--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+  path: /
+  controller: App\Controller\TryStuffController::index
 
 # try_stuff
 try_stuff_output:
